término do desenvolvimento do HTML

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <img src="./foto arthur2.0.jpg" alt="imagem do criador da pagina de links, arthur fernandes">
         <h1> arthur fernandes</h1>
         <p>são paulo, Brasil</p>
+
+        <p>estudante viciado em tigrinho e rico bem novinho</p>
+
+        <a href="https://github.com/arthurfernandes11tib/meus-links">github</a>
+        <a href="instagram.com/arthurmarquesx__/">instagram</a>
+        <a href="https://www.tiktok.com/@arthurmarquexs_">ttk</a>
     </div>
 </body>
-</html> 
+</html>  
