continuação do desenvovimento dos css e alteração de um parágrafo do html para strong

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div>
         <img src="./foto arthur2.0.jpg" alt="imagem do criador da pagina de links, arthur fernandes">
         <h1> arthur fernandes</h1>
-        <p>são paulo, Brasil</p>
+        <strong>são paulo, Brasil</strong>
 
-        <p>estudante viciado em tigrinho e rico bem novinho</p>
+        <p>estudante viciado em tigrinho</p>
 
         <a href="https://github.com/arthurfernandes11tib/meus-links">github</a>
         <a href="instagram.com/arthurmarquesx__/">instagram</a>
-        <a href="https://www.tiktok.com/@arthurmarquexs_">ttk</a>
+        <a href="https://www.tiktok.com/@arthurmarquexs_">tiktok</a>
     </div>
 </body>
 </html>  
