--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1> arthur fernandes</h1>
         <strong>são paulo, Brasil</strong>
 
-        <p>estudante viciado em tigrinho</p>
+        <p>estudante, viciado em tigrinho</p>
 
         <a href="https://github.com/arthurfernandes11tib/meus-links">github</a>
         <a href="instagram.com/arthurmarquesx__/">instagram</a>
