adicionado o atributo target. projeto finalizado

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
         <p>estudante, viciado em tigrinho</p>
 
-        <a href="https://github.com/arthurfernandes11tib/meus-links">github</a>
-        <a href="instagram.com/arthurmarquesx__/">instagram</a>
-        <a href="https://www.tiktok.com/@arthurmarquexs_">tiktok</a>
+        <a href="https://github.com/arthurfernandes11tib/meus-links" target="_blank">github</a>
+        <a href="https://www.instagram.com/arthurmarquesx__?igsh=aG10YTdwM2llazdo&utm_source=qr" target="_blank">instagram</a>
+        <a href="https://www.tiktok.com/@arthurmarquexs_" target="_blank">tiktok</a>
     </div>
 </body>
 </html>  
